--- a/.github/workflows/first_workflow.yml
+++ b/.github/workflows/first_workflow.yml
@@ -2,7 +2,7 @@ name: Deploying The project
 on: [push, workflow_dispatch]
 jobs:
   Lint:
-   runs-on: ubuntu_latest
+   runs-on: ubuntu-latest
    steps:
     - name: Checkout the code 
       uses: actions/checkout@v4
