--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -2,8 +2,14 @@ name: Events Demo 1
 on:
   pull_request:
     types: 
-      -opened
+      - opened
   workflow_dispatch:
+  push:
+   branches:
+    - main
+    - dev-*
+   paths:
+    - '.github/workflows/*'
 jobs:
  deploy:
   runs-on:  ubuntu-latest 
